--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,23 @@ html, body {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #2c3e50;
+  background: #222;
+  color: white;
   overflow: hidden;
 }
 
-.code-playground {
+#code-playground {
   display: flex;
   flex-direction: row;
+  flex-wrap: nowrap;
   width: 100%;
+}
+
+#select-editor {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
 }
 
 #log-list {
@@ -17,25 +26,30 @@ html, body {
   text-align: left;
 }
 
-.code {
-  flex: 1;
-  flex-grow: 1;
+#code-panel {
+  display: block;
+  position: relative;
+  flex: 1 2 70%;
+  overflow: hidden;
 }
 
 #editor {
-  display: block;
-  position: relative;
   width: 100%;
   height: 100vh;
 }
 
-.info {
+#info-panel {
+  display: block;
   max-height: 100vh;
   overflow: scroll;
-  flex-basis: 30%;
-  flex-shrink: 1;
-  flex-grow: 0;
-  resize: horizontal;
+  min-width: 300px;
+  flex: 1 1 30%;
+  background: #333;
+  color: white;
+}
+
+.output-hidden #info-panel {
+  display: none;
 }
 
 #sandbox {
@@ -47,4 +61,30 @@ html, body {
 
 .hidden {
   display: none;
+}
+
+#side-menu {
+  display: flex;
+  flex-flow: column;
+  background: #333
+}
+
+.output-hidden .hide-icon {
+  display: none;
+}
+
+.output-hidden .show-icon {
+  display: block;
+}
+
+#side-menu i {
+  color: white;
+  font-size: 36px;
+  cursor: pointer;
+}
+
+#side-menu > div {
+  user-select: none;
+  margin: 18px 12px;
+  cursor: pointer;
 }
