--- a/public/styles.css
+++ b/public/styles.css
@@ -33,8 +33,8 @@ html, body {
   display: block;
   max-height: 100vh;
   overflow: scroll;
-  min-width: 300px;
-  flex: 1 1;
+  min-width: 200px;
+  flex: 1 1 40%;
   background: #333;
   color: white;
   text-align: center;
@@ -191,6 +191,28 @@ html, body {
 #log-list {
   padding: 12px;
   text-align: left;
+}
+
+.log-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-bottom: 1px solid white
+}
+
+.log-timestamp {
+  flex: 1 1 20%;
+}
+
+.log-content {
+  overflow-x: scroll;
+  flex: 1 1 80%;
+}
+
+.divider {
+  width: 80%;
+  height: 1px;
+  background: white;
 }
 
 /** Left Menu **/
