--- a/public/styles.css
+++ b/public/styles.css
@@ -215,6 +215,15 @@ html, body {
   background: white;
 }
 
+.log-label {
+  flex: 1 1 20%;
+  color: green;
+}
+
+.log-label-error {
+  color: red;
+}
+
 /** Left Menu **/
 
 #side-menu {
